# routes/api.go
@@ -14,6 +14,7 @@ func SetApiGroupRoutes(router *gin.RouterGroup) {
 	authRouter := router.Group("").Use(middleware.JWTAuth(services.AppGuardName))
 	{
 		authRouter.POST("/auth/info", app.Info)
+		authRouter.POST("/auth/logout", app.Logout)
 	}
 
 }
